# dnaSpec

./: .coverage  .gitignore  .npmignore  AGENTIC_FUNCTIONALITIES_REPORT.md  AGENT_CREATOR_MEMORY_INTEGRATION.md  AGENT_CREATOR_SKILL_TEST_REPORT.md  AGENT_SKILLS_ANALYSIS_REPORT.md  ALL_SKILLS_REFACTOR_COMPLETE.md  ALL_SKILLS_REFACTOR_STATUS.md  API_DOCUMENTATION.md  ARCHITECTURE_SPEC.md  BIOLOGICAL_ARCHITECTURE_DESIGN.md  Biological_Organism_Architecture_Enhancement_Report.md  CACHE_GIT_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CLAUDE_AGENT_SKILLS_ORGANIZATION.md  CLEANUP_REPORT.md  CLI_COLLABORATION_WORKFLOW.md  COMMAND_FORMAT_CLEANUP_REPORT.md  COMPLETE_FEATURES_DOCUMENTATION.md  COMPLETE_VERIFICATION_REPORT.md  CONSTITUTIONAL_MODULE_FORMATION_IMPLEMENTATION.md  CONTEXT_FUNDAMENTALS_SKILL_COMPLETION_REPORT.md  CONTRACT.yaml  CORE_REQUIREMENTS.md  CORE_SKILLS_DEFINITION.md  CORRECT_USAGE_GUIDE.md  CROSS_CLI_DEPLOYMENT_DOCUMENTATION.md  CROSS_CLI_DEPLOYMENT_PLAN.md  DASHBOARD.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MANUAL.md  DNASPEC_ALL_SKILLS_COMPLETE.md  DNASPEC_COMMANDS_SIMPLIFIED.md  DNASPEC_COORDINATION_FRAMEWORK_COMPLETION_REPORT.md  DNASPEC_DUAL_CALL_TEST_REPORT.md  DNASPEC_IFLOW_COMMANDS.md  DNASPEC_INIT_SKILL_USAGE_GUIDE.md  DNASPEC_INIT_USAGE.md  DNASPEC_MEMORY_SYSTEM_COMPLETE.md  (+373 more)
.claude/: settings.local.json
.clinerules/: project-context.md
.dsgs/: config.yaml  integrated-config.yaml
.qwen/: PROJECT_SUMMARY.md
Context-Engineering/: README.md
DSGS-Project/: AI_STANDARDIZED_DESIGN_DOC.md  CROSS_PLATFORM_INTEGRATION_DISCUSSION.md  DEPLOYMENT_GUIDE.md  GEMINI_EXTENSION_CONFIG.json  GEMINI_EXTENSION_README.md  INTEGRATION_IMPLEMENTATION_PLAN.md  PROJECT_COMPLETION_REPORT.md  PROJECT_LOG.md  PROJECT_TASK_LIST.md  SPEC_KIT_INTEGRATION_PLAN.md  TASK_DECOMPOSITION.md  TDD_IMPLEMENTATION_PLAN.md  WHY_NOT_GEMINI_CLI_AS_BEST_PRACTICE.md  demo_agent_creator.py  demo_complete_workflow.py  demo_dapi_checker.py  demo_modulizer.py  demo_target_system_agents.py  demo_usage.py  deploy_gemini_extensions.py  dsgs_gemini_cli.py  gemini_integration.py  gemini_skills_core.py  install_gemini_extension.py  integration_confidence_analysis.py  test_agent_creator_simple.py  test_import.py  test_integration_agent_creator.py  test_integration_constraint_generator.py  test_integration_task_decomposer.py  test_new_keywords.py  test_skills_discovery.py
analysis/: cleanup_analysis.md
archive/: ARCHITECT_SKILL_IMPLEMENTATION_PLAN.md  Collaboration_Isolation_Enhancement_Report.md  DSGS_CONTEXT_ENGINEERING_API_SPECIFICATION.md  DSGS_CONTEXT_ENGINEERING_IMPLEMENTATION_PLAN.md  DSGS_CONTEXT_ENGINEERING_SPECIFICATION.md  FINAL_IMPLEMENTATION_VERIFICATION.md  FINAL_IMPLEMENTATION_VERIFIED.md  FINAL_VALIDATION_REPORT.md  Hierarchical_Agent_Specification.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  P2-T4_HOOK_SYSTEM_ENHANCEMENT_REPORT.md  TDD_IMPLEMENTATION_SUMMARY.md  TECHNICAL_IMPLEMENTATION_ROADMAP.md  UPGRADE_IMPLEMENTATION_PLAN.md  VERTICAL_SLICE_IMPLEMENTATION_PLAN.md  architecture_demo.py  auto_deployment_checker.py  comprehensive_verification.py  copy_docs.py  copy_files.py  copy_src.py  debug_hook_test.py  debug_path.py  demo.py  deployment_check.py  end_to_end_integration_test.py  end_to_end_test.py  final_comprehensive_validation.py  final_integration_test.py  final_system_verification.py  final_validation.py  final_validation_refactored.py  final_validation_test.py  final_verification.py  interactive_demo.py  local_adaptation_checker.py  production_integration_test.py  quick_test.py  real_implementation_verification.py  (+13 more)
claude_skills/: DNA_SPEC_Real_World_Testing_Report.md  DNA_SPEC_Skills_Alignment_Final_Report.md  SKILLS_ALIGNMENT_COMPLETION_REPORT.md  __init__.py  claude_skill.py  deployment_and_testing_plan.md  main.py  progressive_disclosure_validation_report.md  qualitative_quantitative_integration_validation_report.md  skill_config.json  skill_manifest.json
config/: memory_config.json
dna-context-engineering/: INSTALL_GUIDE.md  LICENSE  QWEN.md  RELEASE_NOTES_v1.0.1.md  pyproject.toml  validate_urls_and_copyright.py
dnaSpec/: ARCHITECTURE_SPEC.md  README.md  (+7 more)
dnaSpec/spec-kit/: SKILLS_SUMMARY.md  pyproject.toml
dnaSpec/spec-kit/scripts/: manage_speckit.py
dnaSpec/spec-kit/skills/cognitive-template/: SKILL.md
dnaSpec/spec-kit/skills/context-analysis-enhanced/: SKILL.md
dnaSpec/spec-kit/skills/dna-constraint-generator/: SKILL.md
dnaSpec/spec-kit/skills/dna-dapi-checker/: SKILL.md
dnaSpec/spec-kit/templates/: specification-template.md
(+1971 files in other folders)
