[project]
name = "dnaspec-context-engineering-skills"
version = "2.0.0"
description = "DNA SPEC Context System (dnaspec) - Context Engineering Enhancement Toolkit for AI CLI Platforms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DNASPEC Team", email = "dnaspec@example.com"},
]

dependencies = [
    "requests>=2.28.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v"
]

[tool.coverage.run]
source = ["src/"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[project.scripts]
dnaspec-spec-kit = "dna_spec_kit_integration.cli:main"
dnaspec-deploy = "dna_spec_kit_integration.core.deployment_manager:main"
dnaspec-deploy-extensions = "dna_spec_kit_integration.core.cli_extension_deployer:main"
dnaspec-handler = "dna_spec_kit_integration.cli_extension_handler:main"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]