[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-kit"
version = "1.0.0"
description = "Spec-Driven Development Toolkit for AI-assisted development"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Spec Kit Development Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/github/spec-kit"
Repository = "https://github.com/github/spec-kit.git"